# Ros2_cartesian_robot

./: README.md
src/urdf_bringup/: CMakeLists.txt  package.xml
src/urdf_bringup/config/: controller_configuration.yaml
src/urdf_humble_test/: CMakeLists.txt  package.xml
src/urdf_humble_test/config/: config.rviz  gazebo
src/urdf_humble_test/launch/: display.launch.py  gazebo.launch.py
src/urdf_humble_test/src/: hareket.py  joint_effort.py  listener.py  object_detection.py  talker.py
src/urdf_humble_test/urdf/: model.urdf
